YAML/service-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a-deployment
  template:
    metadata:
      labels:
        app: service-a-deployment
    spec:
    containers:
        - name: service-a-deployment
          image: nitzanacr.azurecr.io/service-a:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /readiness
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
