YAML/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: service-b-deployment
  ports:
    - port: 8081
      targetPort: 80
  type: ClusterIP
